# InfinityAudio

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  app_icon.rc  main.cpp  recorder.cpp  recorder.h  resources.qrc  ui_widget.cpp  ui_widget.h  vu_meter_widget.cpp  vu_meter_widget.h  watchdog.cpp  watchdog.h  wav_writer.cpp  wav_writer.h  web_server.cpp  web_server.h
build_scripts/: build-installer.bat  build-linux.sh  build-mac.sh  build-windows.bat
cmake/: copy_runtime_deps.cmake
packaging/: infinityaudio.desktop
packaging/windows/: InfinityAudio.iss  README.md
